bugs about drawing fixed

--- a/www/index.html
+++ b/www/index.html
@@ -324,10 +324,11 @@
         <li>2023 年 2 月 16 日：公開</li>
         <li>2023 年 2 月 16 日：大きめのメモリリークが起きて、30 分くらい計算を続けるとクラッシュしてしまう問題を解決。</li>
         <li>2023 年 2 月 24 日：ベルヌーイ式も図示できるようにした。</li>
+        <li>2023 年 2 月 27 日：線を描きすぎると図が真っ暗になってしまう問題を解決。図の端に線を描くとフリーズする問題を解決。</li>
       </ul>
       <h4>現在分かっている問題</h4>
       <ul>
-        <li>線を描きすぎると、アプリが描画をあきらめて図が真っ暗になってしまう。</li>
+        <li></li>
       </ul>
       <h4>やり残したこと</h4>
       <ul>
